--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,27 +1,30 @@
-#Installing ruby enviroment
+# syntax=docker/dockerfile:1
 FROM ruby:3.0.0
-# yarnインストール時のバージョンを指定
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
-    && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+#package install
+RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
 
-# パッケージリスト更新後、railsとDBに必要なパッケージインストール
-RUN apt-get update && apt-get install -y nodejs postgresql-client yarn
+RUN apt-get update && apt-get install -y curl apt-transport-https wget && \
+curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
+echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
+apt-get update && apt-get install -y yarn
+RUN apt-get install -y nodejs npm
 
-# /appを作業ディレクトリとし、Gemfile Gemfile.lockをコピーする
-WORKDIR /app
-COPY Gemfile Gemfile.lock ./
-
-# コピーしたGemfile Gemfile.lockに書いてあるGemをinstallする
+WORKDIR /myapp
+COPY Gemfile /myapp/Gemfile
+COPY Gemfile.lock /myapp/Gemfile.lock
 RUN bundle install
+RUN rails webpacker:install
 
-# railsのアプリを含め、すべてのファイルをコピー
-COPY . ./
-
-# exec when every container started
+# add script
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
 ENTRYPOINT ["entrypoint.sh"]
 EXPOSE 3000
 
-#exec when start container
+# setting server
 CMD ["rails", "server", "-b", "0.0.0.0"]
+
+#データベース設定
+#ENV DATABASE_USERNAME ******
+#ENV DATABASE_PASSWORD ******
+#ENV DATABASE_HOST db 
