change setup files

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 FROM ruby:3.0.0
-#package install
+# 必要なパッケージをインストール
 RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
 
 RUN apt-get update && apt-get install -y curl apt-transport-https wget && \
@@ -15,16 +15,16 @@ COPY Gemfile.lock /myapp/Gemfile.lock
 RUN bundle install
 RUN rails webpacker:install
 
-# add script
+# コンテナー起動時に毎回実行されるスクリプトを追加
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
 ENTRYPOINT ["entrypoint.sh"]
 EXPOSE 3000
 
-# setting server
+# イメージ実行時に起動させる主プロセスを設定
 CMD ["rails", "server", "-b", "0.0.0.0"]
 
 #データベース設定
-#ENV DATABASE_USERNAME ******
-#ENV DATABASE_PASSWORD ******
-#ENV DATABASE_HOST db 
+ENV DATABASE_USERNAME tsukumon
+ENV DATABASE_PASSWORD Kbc&chat_2022
+ENV DATABASE_HOST db 
