--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,23 +1,18 @@
-version: '3'
-
+version: "3.9"
 services:
+  db:
+    image: postgres
+    volumes:
+      - ./tmp/db:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: tsukumon
+      POSTGRES_PASSWORD: Kbc&chat_2022
   web:
     build: .
-    ports:
-      - '3000:3000'
-    volumes: 
-      - '.:/app'
-    tty: true
-    stdin_open: true
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-    # db作成後にコンテナ作成
-    depends_on: 
-      - db
-
-  db:
-    image: postgres:13
     volumes:
-      - ./db:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: password
+      - .:/myapp
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
