--- a/chatapp/docker-compose.yml
+++ b/chatapp/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: tsukumon
-      POSTGRES_PASSWORD: Kbc&chat_2022
+      POSTGRES_PASSWORD: password
   web:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
