--- a/chatapp/Gemfile
+++ b/chatapp/Gemfile
@@ -30,6 +30,10 @@ gem "jbuilder"
 # Install Japanese pack
 gem 'rails-i18n', '= 7.0.1'
 
+#Install carrierwave&mini_magick
+gem 'carrierwave'
+gem 'mini_magick'
+
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
 
