--- a/chatapp/Gemfile
+++ b/chatapp/Gemfile
@@ -34,6 +34,9 @@ gem 'rails-i18n', '= 7.0.1'
 gem 'carrierwave'
 gem 'mini_magick'
 
+#Install carrierwave&mini_magick
+gem 'ransack'
+
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
 
