--- a/chatapp/Gemfile
+++ b/chatapp/Gemfile
@@ -48,6 +48,8 @@ gem "tilt", "= 2.0.10"
 #Install Suggest
 gem "jquery-ui-rails", "= 6.0.1"
 
+gem 'jquery-turbolinks'
+
 # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
 # gem "kredis"
 
