--- a/chatapp/Gemfile
+++ b/chatapp/Gemfile
@@ -34,8 +34,11 @@ gem 'rails-i18n', '= 7.0.1'
 gem 'carrierwave'
 gem 'mini_magick'
 
-#Install carrierwave&mini_magick
+#Install ransack
 gem 'ransack'
+
+#Install kaminari
+gem 'kaminari'
 
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
