--- a/chatapp/Gemfile
+++ b/chatapp/Gemfile
@@ -39,6 +39,8 @@ gem 'ransack'
 
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
+gem 'omniauth-google-oauth2'
+gem 'omniauth-rails_csrf_protection'
 
 #Install SCSS
 gem "sassc-rails", "= 2.1.2"
@@ -74,6 +76,7 @@ group :development, :test do
   gem 'factory_bot_rails'
   gem 'rspec-rails'
   gem 'faker'
+  gem 'dotenv-rails'
 end
 
 group :development do
