--- a/chatapp/Gemfile
+++ b/chatapp/Gemfile
@@ -52,6 +52,9 @@ gem "jquery-ui-rails", "= 6.0.1"
 
 gem 'jquery-turbolinks'
 
+#Install kaminari
+gem 'kaminari'
+
 # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
 # gem "kredis"
 
