--- a/chatapp/Gemfile
+++ b/chatapp/Gemfile
@@ -55,6 +55,9 @@ gem 'jquery-turbolinks'
 #Install kaminari
 gem 'kaminari'
 
+gem 'redcarpet'
+gem 'rouge'
+
 # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
 # gem "kredis"
 
